--- a/src/index.css
+++ b/src/index.css
@@ -198,3 +198,25 @@ body {
   font-family: sans-serif;
 }
 
+.login-button, .signup-button {
+  padding: 5px 20px;
+  margin-right: 15px;
+  margin-top: 8px;
+  border-radius: 5px;
+}
+
+.signup-content {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-auto-rows: 40px;
+  grid-row-gap: 15px;
+  margin: auto;
+  width: 400px;
+  height: 550px;
+}
+
+.signup-content input {
+  border-radius: 5px;
+}
+
+
