--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,9 @@ body {
 }
 
 .user-info {
+  display: flex;
   text-align: center;
+  padding-left: 15px;
 }
 
 .container {
@@ -198,11 +200,15 @@ body {
   font-family: sans-serif;
 }
 
-.login-button, .signup-button {
+.login-button, .signup-button, .logout-button {
   padding: 5px 20px;
   margin-right: 15px;
   margin-top: 8px;
   border-radius: 5px;
+}
+
+.logout-button {
+  margin-left: 20px;
 }
 
 .signup-content {
